<resources>
    <string name="app_name">My Application</string>
    <string name="Irvine">Irvine</string>
    <string name="BayArea">Bay Area</string>
    <string name="content_description_media" />
    <string name="title">Tan-Cha</string>
    <string name="title2">Omomo Tea Shoppe</string>
    <string name="title3">The Alley</string>
    <string name="order">Order</string>
    <string name="menu">Popular Drinks</string>
    <string name="tanchaadress">5317 University Dr, Irvine, CA 92612</string>
    <string name="omomoaddress">5365 Alton Pkwy, Irvine, CA 92604</string>
    <string name="theAlleyadress">507 Spectrum Center Dr, Irvine, CA 92618</string>
    <string name="tancha1">Brulee Milk Tea with Boba</string>
    <string name="tancha2">Royal Ceylon Milk Tea w/ Tiramisu Puff Cream</string>
    <string name="tancha3">High Mountain Green Tea with Cheese Foam</string>
    <string name="tancha4">Cocoa Drink with Cheese Foam &amp; Oreo</string>
    <string name="tancha5">Super Lemon Tea</string>
    <string name="tancha6">Thai Milk Tea</string>
    <string name="tancha7">Strawberry Smoothie</string>
    <string name="tancha8">Strawberry Green Tea</string>
    <string name="tancha9">Pu’ er Tea With Matcha Foam</string>
    <string name="tancha10">Frothy Matcha Cappuccino</string>
    <string name="tancha11">Matcha Smoothie</string>
    <string name="tancha12">Matcha Espresso</string>
    <string name="tancha13">Lemon Yakult</string>
    <string name="tancha14">Fresh Grapefruit Slush</string>
    <string name="tancha15">Milk Tea</string>
    <string name="tancha16">Brown Sugar Latte with Boba</string>
    <string name="tancha17">Uji Green Milk Tea</string>
    <string name="tancha18">Fresh Tea</string>
    <string name="tancha19">Super Fruit Tea</string>
    <string name="omomo1">Omomo Matcha</string>
    <string name="omomo2">Camo Thai</string>
    <string name="omomo3">Oreo Brulee Green Milk Tea</string>
    <string name="omomo4">Taro Fresh Milk</string>
    <string name="omomo5">Fruit Tornado Strawberry</string>
    <string name="omomo6">Fruit Tornado Mango</string>
    <string name="omomo7">Avocado Smash</string>
    <string name="omomo8">Matcha Cortado</string>
    <string name="omomo9">Uji Green Milk Tea</string>
    <string name="omomo10">Gyokuro</string>
    <string name="omomo11">Jasmine</string>
    <string name="omomo12">Four Seasons</string>
    <string name="omomo13">Oolong</string>
    <string name="omomo14">White Peach</string>
    <string name="omomo15">Ceylon Milk Tea</string>
    <string name="omomo16">Cocoa Latte</string>
    <string name="omomo17">Black Jade Milk Tea</string>
    <string name="omomo18">Thai Iced Milk Tea</string>
    <string name="omomo19">Americano w/ Tiramisu</string>
    <string name="omomo20">Angry Matcha</string>
    <string name="omomo21">Cafe Latte w/ Tiramisu</string>
    <string name="omomo22">Lemon Coffee</string>
    <string name="omomo23">GrapeFruit Smash</string>
    <string name="alley1">Brown Sugar Deerioca Milk</string>
    <string name="alley2">Cocoa Brown Sugar Deerioca Milk</string>
    <string name="alley3">Matcha Brown Sugar Deerioca Milk</string>
    <string name="alley4">Brown Sugar Deerioca Creme Brulee Milk</string>
    <string name="alley5">Snow Strawberry Lulu</string>
    <string name="alley6">Orange Lulu</string>
    <string name="alley7">Avocado Smash</string>
    <string name="alley8">Matcha Cortado</string>
    <string name="alley9">Uji Green Milk Tea</string>
    <string name="alley10">Gyokuro</string>
    <string name="alley11">Jasmine</string>
    <string name="alley12">Four Seasons</string>
    <string name="alley13">Oolong</string>
    <string name="alley14">White Peach</string>
    <string name="alley15">Ceylon Milk Tea</string>
    <string name="alley16">Cocoa Latte</string>
    <string name="alley17">Black Jade Milk Tea</string>
    <string name="alley18">Thai Iced Milk Tea</string>
    <string name="alley19">Americano w/ Tiramisu</string>
    <string name="alley20">Angry Matcha</string>
    <string name="alley21">Cafe Latte w/ Tiramisu</string>
    <string name="alley22">Lemon Coffee</string>
    <string name="alley23">GrapeFruit Smash</string>
    <string name="secondary_text">11:00 a.m. - 10:30 p.m.</string>
    <string name="secondary_text2">12:00 a.m. - 07:00 p.m.</string>
    <string name="secondary_text3">11:00 a.m. - 09:00 p.m.</string>
    <string name="tanchahours">11:00 a.m. - 09:00 p.m.</string>
    <string name="thealleyslogan">It\'s Time For Tea!</string>
    <string name="supporting_text" />
    <string name="action_1">Like</string>
    <string name="action_2" />
</resources>
